tests/snapshots/snapshot_tests__array_even_odd_2.vmt.snap
---
source: tests/snapshot_tests.rs
expression: run_benchmark(&path)
---
BenchmarkResult {
    example_name: "./examples/array_even_odd_2.vmt",
    status: Panic,
    used_instantiations: [],
}
