tests/snapshots/snapshot_tests__array_horn_copy2.vmt.snap
---
source: tests/snapshot_tests.rs
expression: run_benchmark(&path)
---
BenchmarkResult {
    example_name: "./examples/array_horn_copy2.vmt",
    status: Good,
    used_instantiations: [
        "(= (Read-Int-Int (Write-Int-Int A Z (Read-Int-Int B Z)) Z) (Read-Int-Int B Z))",
        "(= (Read-Int-Int (Write-Int-Int Array-Int-Int!val!0 Z (Read-Int-Int B Z)) Z) (Read-Int-Int B Z))",
        "(= (Read-Int-Int (Write-Int-Int Array-Int-Int!val!0 Z (Read-Int-Int B Z)) Z) (Read-Int-Int Array-Int-Int!val!0 Z))",
        "(= (Read-Int-Int (Write-Int-Int A Z (Read-Int-Int B Z)) Z) (Read-Int-Int A Z))",
    ],
}
