tests/snapshots/snapshot_tests__array_hybr_add.snap
---
source: tests/snapshot_tests.rs
expression: run_benchmark(&path)
---
BenchmarkResult {
    example_name: "examples/array_hybr_add.vmt",
    status: Good,
    used_instantiations: [
        "(= (Read-Int-Int (Write-Int-Int a Z j_next) Z) j_next)",
        "(= (Read-Int-Int (Write-Int-Int a_next Z j) Z) j)",
        "(= (Read-Int-Int (Write-Int-Int a Z j) Z) j)",
        "(= (Read-Int-Int (Write-Int-Int a_next Z j) Z) (Read-Int-Int a_next Z))",
    ],
}
