tests/snapshots/snapshot_tests__array_hybr_nest_3.snap
---
source: tests/snapshot_tests.rs
expression: run_benchmark(&path)
---
BenchmarkResult {
    example_name: "examples/array_hybr_nest_3.vmt",
    status: Good,
    used_instantiations: [],
}
